examples/datalog/31_strings/15_string_replace.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_replace
Knowledge graph 'test_replace' created.
Switched to knowledge graph: test_replace
> .kg use test_replace
Switched to knowledge graph: test_replace
> +words[("hello world",), ("hello there",)].
Inserted 2 fact(s) into 'words'.
> replaced(S, R) :- words(S), R = REPLACE(S, "hello", "hi").
Script error: Parse error: Invalid term: 'REPLACE(S, "hello", "hi")'
